fixed: added whatMakesUsUniqueImage
